k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app-namespace

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: abhilashr7/pulse-saas-platform-frontend
        ports:
        - containerPort: 5173


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app-namespace
spec:
  ports:
  - port: 5173
    targetPort: 5173
  selector:
     app: frontend
