k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: app-namespace
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7

        
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: app-namespace
spec:
  ports:
  - port: 6379
  selector:
    app: redis
